--- a/article/app/views/fragments/witnessCallToAction.scala.html
+++ b/article/app/views/fragments/witnessCallToAction.scala.html
@@ -4,11 +4,11 @@
     @content.witnessAssignment.map{ assignmentId =>
         @defining(s"https://witness.guardian.co.uk/assignment/$assignmentId#contribute"){ assignmentUrl =>
             <div class="witness-call-to-action">
-                <a href="@InBodyLink{@assignmentUrl}" data-link-name="witness cta plus">
+                <a href="@LinkTo{@assignmentUrl}" data-link-name="witness cta plus">
                     <i class="i i-ee-add-button"></i>
                  </a>
                     <div class="witness-call-to-action--box">
-                        <a href="@InBodyLink{@assignmentUrl}" data-link-name="witness cta text">
+                        <a href="@LinkTo{@assignmentUrl}" data-link-name="witness cta text">
                             <p>
                                 Contribute with <i class="i i-witness-logo" title="Guardian Witness"></i>
                             </p>
