--- a/common/app/views/fragments/formatTags.scala.html
+++ b/common/app/views/fragments/formatTags.scala.html
@@ -1,3 +1,3 @@
 @(tag: Tag)(implicit request: RequestHeader)
 
-<li class="b1"><a href="@InBodyLink{@tag.url}">@Html(tag.name)</a></li>
+<li class="b1"><a href="@LinkTo{@tag.url}">@Html(tag.name)</a></li>
