--- a/common/app/views/fragments/trails/headline.scala.html
+++ b/common/app/views/fragments/trails/headline.scala.html
@@ -5,7 +5,7 @@
     @fragments.relativeDate(trail.webPublicationDate, trail.isLive, isFront=true)
 
     <h@headingLevel class="trail__headline type-5">
-        <a href="@InBodyLink{@trail.url}" @if(related){itemprop="relatedLink"} data-link-name="@rowNum | text">
+        <a href="@LinkTo{@trail.url}" @if(related){itemprop="relatedLink"} data-link-name="@rowNum | text">
             @cleanTrailText(trail.headline)(Edition(request))
         </a>
     </h@headingLevel>
