--- a/football/app/views/fragments/liveMatch.scala.html
+++ b/football/app/views/fragments/liveMatch.scala.html
@@ -2,7 +2,7 @@
 @import implicits.Football._
 
 <li class="match live-match">
-    <a href="@InBodyLink{@MatchUrl(live)}" data-link-name="stats" data-match-id="@live.id">
+    <a href="@LinkTo{@MatchUrl(live)}" data-link-name="stats" data-match-id="@live.id">
         <p class="match-desc type-10">
             <span class="match-home match-team">@live.homeTeam.name</span>
             <span class="match-result">@live.homeTeam.score-@live.awayTeam.score</span>
