--- a/football/app/views/fragments/matchesBody.scala.html
+++ b/football/app/views/fragments/matchesBody.scala.html
@@ -3,7 +3,7 @@
 @import org.joda.time.DateTime
 
 <h2 class="article-zone type-1 sport-header">
-    <a class="zone-color" data-link-name="article section" href="@InBodyLink{/football}">Football</a>
+    <a class="zone-color" data-link-name="article section" href="@LinkTo{/football}">Football</a>
 </h2>
 
 @if(model.pageType == "live") {
@@ -25,8 +25,8 @@
 
     @if(model.previousPage.isDefined || model.nextPage.isDefined) {
         <div class="js-matches-nav matches-nav cf js-not-ajax" data-link-name="@model.pageType nav">
-            @model.previousPage.map{url => <a href="@InBodyLink{@url}" class="type-11 match-prev" data-js-title="Show previous day's matches" data-link-name="previous">Previous day</a>}
-            @model.nextPage.map{url => <a href="@InBodyLink{@url}" class="type-11 match-next" data-js-title="Show next day's matches" data-link-name="next">Next day</a>}
+            @model.previousPage.map{url => <a href="@LinkTo{@url}" class="type-11 match-prev" data-js-title="Show previous day's matches" data-link-name="previous">Previous day</a>}
+            @model.nextPage.map{url => <a href="@LinkTo{@url}" class="type-11 match-next" data-js-title="Show next day's matches" data-link-name="next">Next day</a>}
         </div>
     }
 
