--- a/common/app/assets/stylesheets/global.scss
+++ b/common/app/assets/stylesheets/global.scss
@@ -26,6 +26,7 @@
 @import "module/_search";
 @import "module/_homescreen";
 @import "module/_debug";
+@import "module/nav/_localnav";
 @import "module/nav/_pop-up";
 @import "module/_live-blog";
 @import "module/football/_matches";
