--- a/common/app/assets/stylesheets/module/nav/_localnav.scss
+++ b/common/app/assets/stylesheets/module/nav/_localnav.scss
@@ -30,4 +30,10 @@
     .nav__link {
         color: #333333;
     }
+
+    .is-active .nav__link {
+        font-family: $serifheadline;
+        line-height: 20px;
+        font-weight: 600;
+    }
 }
