--- a/common/app/views/fragments/sections.scala.html
+++ b/common/app/views/fragments/sections.scala.html
@@ -49,7 +49,7 @@
             <li class="nav__item"><a class="nav__link edition edition-au" data-link-name="switch to au edition" href="http://@site.ukHost/australia@if(site.isUsEdition){#gu.prefs.switchOn=australia-edition}">Australia edition</a></li>
         }{
             @Edition.others(request).map{ edition =>
-                <li class="nav__item"><a class="nav__link edition" data-edition="@edition.id" data-link-name="switch to @edition.id edition" href="@LinkTo{/}(edition)">@edition.displayName</a></li>
+                <li class="nav__item"><a class="nav__link edition" data-edition="@edition.id" data-link-name="switch to @edition.id edition" href="@LinkTo("/", edition)">@edition.displayName</a></li>
             }
         }
     </ul>
