--- a/common/app/assets/stylesheets/module/_headers.scss
+++ b/common/app/assets/stylesheets/module/_headers.scss
@@ -5,6 +5,7 @@
 .sub-section-head {
     position: relative;
     overflow: hidden;
+    border-top: $baseline solid $mushroom;
 }
 
     .front-section-head h1,
