--- a/common/app/assets/stylesheets/global.scss
+++ b/common/app/assets/stylesheets/global.scss
@@ -75,3 +75,6 @@
 @import "theme/_global-icons-sprite";
 @import "theme/_global-icons-svg";
 @import "theme/_icons";
+
+// Front refresh experiment
+@import "module/experiments/_front";
